# ArmaLint

./: Cargo.toml  README.md  build.rs  sample.sqf
.github/workflows/: rust.yml
armalint/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
armalint/syntaxes/: alcmds.tmLanguage.json
sqf/: chat.alcmds
src/: error.rs  io.rs  lib.rs  macros.rs  main.rs
src/ast/: dyadic.rs  mod.rs  node.rs
src/commands/: lint.rs  mod.rs  rapify.rs
src/config/: README.md  config.pest  mod.rs  node.rs  parser.rs  preprocess.rs  rapify.rs  render.rs  report.rs  simplify.rs  statement.rs
src/config/ast/: mod.rs  node.rs  preprocess.rs  render.rs  statement.rs
src/config/parser/: mod.rs  node.rs  statement.rs
src/config/preprocess/: actor.rs  mod.rs
src/config/rapify/: array.rs  array_element.rs  class.rs  config.rs  entry.rs  mod.rs  simplify.rs
src/config/render/: mod.rs  options.rs
src/grammars/: arma3.pest  cmds.pest
src/macros/: fs.rs  mod.rs  node.rs
src/preprocess/: mod.rs
src/sqf/: mod.rs  types.rs
src/sqf/ast/: mod.rs  node.rs
src/sqf/commands/: mod.rs
src/sqf/preprocess/: mod.rs
tests/: basic.cpp  basic.rs  define.cpp  define.rs  tokens.cpp  tokens.rs
