[package]
name = "armalint"
version = "0.1.1"
authors = ["Brett <brett@bmandesigns.com>"]
repository = "https://github.com/SynixeBrett/ArmaLint"
description = "An Arma linting library"
keywords = ["arma","sqf"]
edition = "2018"
build = "build.rs"

[dependencies]
pest = "*"
pest_derive = "*"
regex = "1.2"
strum = "0.16"
strum_macros = "0.16"
byteorder = "*"

# Application
lazy_static = "1.3"
clap = "2.33"
colored = "1.8"

[build-dependencies]
pest = "*"
pest_derive = "*"
