[package]
name = "armalint"
version = "0.2.0"
authors = ["Brett <brett@bmandesigns.com>"]
repository = "https://github.com/SynixeBrett/ArmaLint"
description = "An Arma linting library"
keywords = ["arma","sqf"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
regex = "1.2"
strum = "0.16"
strum_macros = "0.16"
byteorder = "1.3"

# Application
lazy_static = "1.3"
clap = "2.33"
colored = "1.8"

[build-dependencies]
pest = "2.1"
pest_derive = "2.1"
